Fix spacing issue on iPhone 12 and others

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,6 @@ h1, h2, h3, h4, h5, figure, figcaption {
 }
 
 .logo {
-  margin-top: -10px;
   display: block;
   max-height: $logoHeight;
 }
@@ -50,6 +49,7 @@ h1, h2, h3, h4, h5, figure, figcaption {
   gap: 20px;
   margin-top: $logoHeight;
 }
+
 @media only screen and (min-width: 576px) {
   .logo {
     max-height: $logoHeight + 50px;
@@ -64,17 +64,17 @@ h1, h2, h3, h4, h5, figure, figcaption {
   }
 }
 
-@media only screen and (max-height: 800px) {
-  .top-bar {
-    position: inherit;
-  }
-  .main {
-    min-height: inherit;
-  }
-  .logo {
-    margin-top: inherit;
-  }
-}
+//@media only screen and (max-height: 800px) {
+//  .top-bar {
+//    position: inherit;
+//  }
+//  .main {
+//    min-height: inherit;
+//  }
+//  .logo {
+//    margin-top: inherit;
+//  }
+//}
 
 .album {
   text-align: center;
